# lora-demo

./: .gitignore  Makefile  README.md  SLIDES.md  WORKSHOP.md  pyproject.toml  sample_test_model.py
docs/: DEPLOYMENT.md  FAILURE_MODES.md
scripts/: benchmark_latency.py  cost_comparison.py  generate_summary_table.py  setup_env.sh
shared/: config.py  cost.py  data_utils.py  eval_harness.py  import_utils.py  output_parsers.py  teacher.py
templates/text_classification/: config.py  cost_comparison.py  create_data.py  train.py
templates/vision_classification/: config.py  cost_comparison.py  create_data.py
tests/: test_configs.py  test_shared.py
use_cases/text/01_ticket_routing/: README.md  config.py  cost_comparison.py  cost_report.txt  create_data.py  download_weights.py  eval.py  self_host.py  train.py
use_cases/text/01_ticket_routing/sample_data/: train_sample.jsonl
use_cases/text/02_pii_detection/: README.md  config.py  cost_comparison.py  create_data.py  eval.py  train.py
use_cases/text/02_pii_detection/sample_data/: cost_report.txt  train_sample.jsonl
use_cases/text/03_sql_generation/: README.md  config.py  cost_comparison.py  cost_report.txt  create_data.py  eval.py  train.py
use_cases/text/04_sentiment_aspect/: README.md  config.py  cost_comparison.py  cost_report.txt  create_data.py  eval.py  train.py
use_cases/vision/01_document_type/: README.md  config.py  cost_comparison.py  create_data.py  eval.py  train.py
use_cases/vision/02_receipt_extraction/: README.md  config.py  cost_comparison.py  cost_report.txt  create_data.py  eval.py  train.py
(+5 files in other folders)
